# Collimator

Collimator/: CMakeLists.txt  Collimator.cc
Collimator/include/: OPDetectorConstruction.hh  OPPrimaryGeneratorAction.hh  OPRunAction.hh  OPSteppingAction.hh
Collimator/src/: OPDetectorConstruction.cc  OPPrimaryGeneratorAction.cc  OPRunAction.cc  OPSteppingAction.cc
